--- a/H2AIndex/Controls/FileTreeControl.xaml
+++ b/H2AIndex/Controls/FileTreeControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:H2AIndex.Models"
+             xmlns:controls="clr-namespace:H2AIndex.Controls"
              xmlns:model="clr-namespace:H2AIndex.Models"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="400">
@@ -72,9 +72,9 @@
 
         <!--#region Search Box -->
 
-        <TextBox x:Name="SearchBox"
-                 Grid.Row="1"
-                 Text="{Binding FileContext.SearchTerm}"/>
+        <controls:SearchBox x:Name="SearchBox"
+                            Grid.Row="1"
+                            TextChangedCommand="{Binding FileContext.SearchTermChangedCommand}"/>
 
         <!--#endregion-->
         
