--- a/H2AIndex/UI/Converters/Converters.xaml
+++ b/H2AIndex/UI/Converters/Converters.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:H2AIndex.UI.Converters">
 
+    <converters:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
     <converters:CollectionVisibilityConverter x:Key="CollectionVisibilityConverter" />
     <converters:IntVisibilityConverter x:Key="IntVisibilityConverter" />
 
