--- a/H2AIndex/UI/Templates/Templates.xaml
+++ b/H2AIndex/UI/Templates/Templates.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/UI/Templates/Template.SearchBox.xaml" />
         <ResourceDictionary Source="/UI/Templates/Template.TextureImageMip.xaml" />
         <ResourceDictionary Source="/UI/Templates/Template.ViewShell.xaml" />
         <ResourceDictionary Source="/UI/Templates/Template.WindowModal.xaml" />
