--- a/H2AIndex/UI/Converters/Converters.xaml
+++ b/H2AIndex/UI/Converters/Converters.xaml
@@ -2,8 +2,13 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:H2AIndex.UI.Converters">
 
+    <converters:EqualityBoolConverter x:Key="EqualityBoolConverter" />
+    <converters:InequalityBoolConverter x:Key="InequalityBoolConverter" />
+    
     <converters:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
     <converters:CollectionVisibilityConverter x:Key="CollectionVisibilityConverter" />
     <converters:IntVisibilityConverter x:Key="IntVisibilityConverter" />
+
+    <converters:BoolToGridLengthConverter x:Key="BoolToGridLengthConverter" />
 
 </ResourceDictionary>
