--- a/H2AIndex/UI/Styles/Controls.CheckBox.xaml
+++ b/H2AIndex/UI/Styles/Controls.CheckBox.xaml
@@ -25,7 +25,7 @@
     </Style>
 
     <Style TargetType="{x:Type CheckBox}">
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
+        <!--<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />-->
         <Setter Property="Background" Value="{DynamicResource OptionMark.Static.Background}" />
         <Setter Property="BorderBrush" Value="{DynamicResource OptionMark.Static.Border}" />
         <Setter Property="Foreground" Value="{DynamicResource Brush.Foreground.Static}" />
