--- a/H2AIndex/Views/MainView.xaml
+++ b/H2AIndex/Views/MainView.xaml
@@ -8,7 +8,11 @@
             xmlns:vm="clr-namespace:H2AIndex.ViewModels"
             xmlns:controls="clr-namespace:H2AIndex.Models"
             mc:Ignorable="d" 
-            d:DesignHeight="450" d:DesignWidth="800">
+            d:DesignHeight="450" d:DesignWidth="800"
+            UseLayoutRounding="True"
+            RenderOptions.BitmapScalingMode="NearestNeighbor"
+            SnapsToDevicePixels="True"
+            RenderOptions.ClearTypeHint="Enabled">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
